--- a/css/main.css
+++ b/css/main.css
@@ -3383,7 +3383,7 @@ footer .row {
     border: none;
     width: 85px;
     height: 25px;
-    background: url("../images/logo.png") no-repeat center;
+    background: url("../images/Logo.png") no-repeat center;
     background-size: 85px 25px;
     font: 0/0 a;
     text-shadow: none;
